added lines & diagonals tracking